<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoPosts</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="view_map">View GeoPosts Around</string>
    <string name="title_activity_get_location">GeoPosts Around</string>
    <string name="write_new_post">Create new GeoPost</string>
    <string name="my_posts_list">View my GeoPosts</string>
    <string name="preferences">Preferences</string>
    <string name="refresh">Refresh</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_new_geopost">New Geopost</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_my_geoposts">My Geoposts</string>
    <string name="title_activity_sample_activity">My Geopost</string>
    
    <string name="general_preferences">General Preferences</string>
    
    <string name="language">Language</string>
    <string name="languages">Languages</string>
    
    <string name="english">English</string>
    <string name="italian">Italian</string>
    <string name="german">German</string>
    <string name="french">French</string>
    
    <string name="geoposts_pref">GeoPosts preferences</string>
         
    <string name="perimeter">Perimeter</string>
    <string name="text_geo_perim">Chose perimeter whithin which GeoPosts will be visible to you</string> 
    
    <string name="text_geo_lang">languages of GeoPosts that will be visible to you</string>
    <string name="text_language">set up the language of the application</string>
    
    <string name="comment">Comment</string>
    <string name="special_event">Special Event</string>
    <string name="recommendation">Recommendation</string>
    
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="text_geo_cat">categories of GeoPosts that will be visible to you</string>
   
    <string name="profile_pref">Your Profile Preferences</string>
    
    <string name="your_id_is">Your ID is:</string>
    <string name="your_name_is">Your name is:</string>
    <string name="your_email_is">Your email is:</string>
    
    <string name="edit_pseudo">Edit Your Pseudo</string>
    <string name="text_edit_pseudo">Change the Pseudo that appears in your GeoPosts</string>
    <string name="new_pseudo">New Pseudo</string>
    <string name="text_enter_pseudo">Enter your new Pseudo</string>
    <string name="default_pseudo">New Pseudo</string>
    
    <string name="lifetime">Lifetime</string>
    <string name="months">months</string>
    <string name="weeks">weeks</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="title">GeoPost Title</string>
    <string name="text">GeoPost Text</string>
    
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="title_cancel">Are you sure you want to cancel this post ?</string>
    <string name="message_cancel">No draft will be saved, all what you have written will be lost !</string>
    <string name="title_submit">Are you sure you want to submit this post ?</string>
    <string name="message_submit">If you select \'yes\' the new GeoPost will be created and be visible to people around. If you select \'no\' you will be able to continue editing the GeoPost.</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="delete">Delete Geopost</string>
    <string name="extend">Extend Lifetime</string>
    
    <string name="title_delete">Are you sure you want to delete this GeoPost ?</string>
    <string name="message_delete">There will be no going back. Once you have deleted this GeoPost, you cannot retrieve it !</string>
    
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_pseudo">Enter your Pseudo</string>
    <string name="enter_password">Enter your Password</string>
    <string name="enter_email">Enter your Email</string>
    
    <string name="view_geopost">GeoPost</string>

    <!-- Network related strings -->
    <string name="unknown_error">An unknown error occurred. Try again later.</string>
    <string name="network_error">Please check your network connectivity and try again.</string>
    <string name="refresh_data_error">Refresh failed. Data is corrupted</string>
    <string name="refresh_ok">Refresh OK</string>
    <string name="wrong_request">Malformed network request</string>
    <string name="unknown_request">Unknown network request</string>
    <string name="login_ok">Login successful!</string>
    <string name="login_error">Login failed!</string>
    <string name="signup_ok">Signup successful!</string>
    <string name="signup_error">Signup failed!</string>
    <string name="signup_username_unique">Username already exists!</string>
    <string name="signup_email_unique">Email already used!</string>
    <string name="post_add_ok">Creation successful!</string>
    <string name="post_remove_ok">Removal successful!</string>
    <string name="post_add_error">Creation failed!</string>
    <string name="post_remove_error">Creation failed!</string>
    <!-- End of network related strings -->
    
</resources>
