<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/citybw"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewGeopost" >
    
    <TextView
        android:id="@+id/new_geopost_lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/normal_start"
        android:text="@string/language"/>
    
    <Spinner
        android:id="@+id/chose_new_geopost_lang"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/languages" 
        android:layout_below="@id/new_geopost_lang"
        />
    
    <TextView
        android:id="@+id/new_geopost_cat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/normal_start"
        android:layout_below="@id/chose_new_geopost_lang"/>
    
    <Spinner
        android:id="@+id/chose_new_geopost_cat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:entries="@array/categories"
        android:layout_below="@id/new_geopost_cat"
        />
    
    <TextView 
        android:id="@+id/new_geopost_lifetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lifetime"
        android:textColor="@color/normal_start"
        android:layout_below="@id/chose_new_geopost_cat"
        />
   
    <RelativeLayout
        android:id="@+id/chose_lifetime"
        android:background="#99FFFFFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_geopost_lifetime"
        android:layout_centerHorizontal="true" >
        
        <NumberPicker 
           	android:id="@+id/month_picker"
       	 	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	/>
    
    	<TextView
        	android:id="@+id/months"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/months"
        	android:layout_centerVertical="true"
        	android:layout_toRightOf="@id/month_picker"
            />
    
    	<NumberPicker 
        	android:id="@+id/week_picker"
        	android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_toRightOf="@id/months"
        	/>
    
    	<TextView
        	android:id="@+id/weeks"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_toRightOf="@id/week_picker"
        	android:text="@string/weeks"/>
    
    	<NumberPicker 
        	android:id="@+id/day_picker"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_toRightOf="@id/weeks"
        	/>
    
    	<TextView
        	android:id="@+id/days"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/days"
        	android:layout_toRightOf="@id/day_picker"
        	android:layout_centerVertical="true"
        	/>
       
    	<NumberPicker 
        	android:id="@+id/hour_picker"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerVertical="true"
        	android:layout_toRightOf="@id/days"
        	/>
    
    	<TextView
        	android:id="@+id/hours"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/hours"
        	android:layout_toRightOf="@id/hour_picker"
        	android:layout_centerVertical="true"
        	/>
    
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/new_geopost_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/normal_start"
        android:layout_below="@id/chose_lifetime"
        />
    
    <EditText
        android:inputType="textCapSentences"
        android:id="@+id/chose_new_geopost_title"
        android:background="#99FFFFFF"
        android:layout_below="@id/new_geopost_title" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView 
        android:id="@+id/new_geopost_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textColor="@color/normal_start"
        android:layout_below="@id/chose_new_geopost_title"
        />
    
    <EditText
        android:inputType="textCapSentences|textMultiLine"
        android:id="@+id/chose_new_geopost_text"
        android:background="#99FFFFFF"
        android:layout_below="@id/new_geopost_text" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minLines="8"
        android:scrollbars="vertical"
        android:gravity="top"
        />
    
    <Button 
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        style="@style/SingleGradient"
        android:layout_below="@id/chose_new_geopost_text"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5sp"/>
    
    <Button 
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        style="@style/SingleGradient"
        android:layout_below="@id/chose_new_geopost_text"
        android:layout_toLeftOf="@id/submit_button"
        android:layout_marginTop="5sp"
        android:layout_marginRight="5sp"
        />
    
</RelativeLayout>
