<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/citybw"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <Button
        android:id="@+id/view_map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/view_map"
        android:onClick="ViewMap"
        style="@style/SingleGradient"/>
    
    <Button
        android:id="@+id/write_new_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_map_button"
        android:layout_centerHorizontal="true"
        android:text="@string/write_new_post"
        style="@style/SingleGradient"
        android:onClick="NewPost"
        android:layout_marginBottom="5sp"
         />
    
    <Button 
        android:id="@+id/view_my_posts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/view_map_button"
        android:text="@string/my_posts_list"
        style="@style/SingleGradient"
        android:onClick="ViewPosts" 
        android:layout_marginTop="5sp"
        />

    
        
</RelativeLayout>
