<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/citybw"
    android:gravity="center_vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30sp" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#AAFFFFFF"
        android:orientation="vertical"
        android:paddingBottom="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:paddingTop="20sp"
        android:scrollbars="vertical" >

        <TextView
            android:id="@+id/pseudo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/enter_pseudo"
            android:textColor="@color/normal_start" />

        <EditText
            android:id="@+id/enter_pseudo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/pseudo"
            android:layout_marginTop="10sp"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/enter_pseudo"
            android:layout_marginTop="10sp"
            android:text="@string/enter_password"
            android:textColor="@color/normal_start" />

        <EditText
            android:id="@+id/enter_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/password"
            android:layout_marginTop="10sp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/enter_password"
            android:layout_marginTop="10sp"
            android:text="@string/enter_email"
            android:textColor="@color/normal_start"/>

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/email"
            android:layout_marginTop="10sp"
            android:inputType="textEmailAddress"/>

        <Button
            android:id="@+id/signup_button"
            style="@style/SingleGradient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/enter_email"
            android:layout_below="@+id/enter_email"
            android:onClick="GoToSignUp"
            android:text="@string/signup" />

    </RelativeLayout>

</RelativeLayout>