<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/citybw"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    >
    
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:background="#AAFFFFFF"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:paddingTop="20sp"
    android:paddingBottom="20sp">

    
	    <TextView 
	        android:id="@+id/pseudo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/enter_pseudo"
	        android:textColor="@color/normal_start"
	        android:layout_alignParentLeft="true"
	        />
	    
	    <EditText
	        android:inputType="textPersonName"
	        android:id="@+id/enter_pseudo"
	        android:layout_below="@id/pseudo" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="10sp"
	        />
	    
	    <TextView 
	        android:id="@+id/password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/enter_password"
	        android:textColor="@color/normal_start"
	        android:layout_below="@id/enter_pseudo"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="10sp"
	        />
	    
	    <EditText
	        android:inputType="textPassword"
	        android:id="@+id/enter_password"
	        android:layout_below="@id/password" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_marginTop="10sp"
	        />
	    
	    <Button 
	        android:id="@+id/done_button"
	        android:onClick="GoToMain"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/done"
	        style="@style/SingleGradient"
	        android:layout_below="@id/enter_password"
	        android:layout_alignParentRight="true"
	        android:layout_marginTop="10sp"/>
	    
	    <Button 
	        android:id="@+id/cancel_login_button"
	        android:onClick="BackFirstLaunch"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel"
	        style="@style/SingleGradient"
	        android:layout_below="@id/enter_password"
	        android:layout_toLeftOf="@id/done_button"
	        android:layout_marginTop="10sp"
	        android:layout_marginRight="10sp"
	        />
 
	</RelativeLayout>
	
</RelativeLayout>
